// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMoreMenu > Renders a More menu for a group moderator 1`] = `
<DocumentFragment>
  <div
    class="list focusList"
    style="min-width: 18em;"
  >
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon at
            </span>
            <span
              class="iconicContent"
            >
              Mention @author
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon comment-dots
            </span>
            <span
              class="iconicContent"
            >
              Moderate comments
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon comment-dots
            </span>
            <span
              class="iconicContent"
            >
              Disable comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link danger"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon trash-alt
            </span>
            <span
              class="iconicContent"
            >
              Remove from @group1
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link danger"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon trash-alt
            </span>
            <span
              class="iconicContent"
            >
              Remove from @group2
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bookmark
            </span>
            <span
              class="iconicContent"
            >
              Save post
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bell
            </span>
            <span
              class="iconicContent"
            >
              Notify of new comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Created on 
            <time
              datetime="2021-08-22T21:33:20.000Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:33
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Updated on 
            <time
              datetime="2021-08-22T21:49:59.999Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:49
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic iconicCentered"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon link
          </span>
          <span
            class="iconicContent"
          >
            <a
              style="margin-right: 1ex;"
            >
              Link to post
            </a>
             
            <button
              aria-label="Copy link"
              class="btn btn-default btn-sm"
              type="button"
              value="https://freefeed.net/post123"
            >
              Copy
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostMoreMenu > Renders a More menu for a logged-in reader 1`] = `
<DocumentFragment>
  <div
    class="list focusList"
    style="min-width: 18em;"
  >
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon at
            </span>
            <span
              class="iconicContent"
            >
              Mention @author
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bookmark
            </span>
            <span
              class="iconicContent"
            >
              Save post
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bell
            </span>
            <span
              class="iconicContent"
            >
              Notify of new comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Created on 
            <time
              datetime="2021-08-22T21:33:20.000Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:33
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Updated on 
            <time
              datetime="2021-08-22T21:49:59.999Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:49
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic iconicCentered"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon link
          </span>
          <span
            class="iconicContent"
          >
            <a
              style="margin-right: 1ex;"
            >
              Link to post
            </a>
             
            <button
              aria-label="Copy link"
              class="btn btn-default btn-sm"
              type="button"
              value="https://freefeed.net/post123"
            >
              Copy
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostMoreMenu > Renders a More menu for a logged-out visitor 1`] = `
<DocumentFragment>
  <div
    class="list focusList"
    style="min-width: 18em;"
  >
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bell
            </span>
            <span
              class="iconicContent"
            >
              Notify of new comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Created on 
            <time
              datetime="2021-08-22T21:33:20.000Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:33
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Updated on 
            <time
              datetime="2021-08-22T21:49:59.999Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:49
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic iconicCentered"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon link
          </span>
          <span
            class="iconicContent"
          >
            <a
              style="margin-right: 1ex;"
            >
              Link to post
            </a>
             
            <button
              aria-label="Copy link"
              class="btn btn-default btn-sm"
              type="button"
              value="https://freefeed.net/post123"
            >
              Copy
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostMoreMenu > Renders a More menu for a post owner 1`] = `
<DocumentFragment>
  <div
    class="list focusList"
    style="min-width: 18em;"
  >
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon edit
            </span>
            <span
              class="iconicContent"
            >
              Edit
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon comment-dots
            </span>
            <span
              class="iconicContent"
            >
              Disable comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link danger"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon trash-alt
            </span>
            <span
              class="iconicContent"
            >
              Delete
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bookmark
            </span>
            <span
              class="iconicContent"
            >
              Save post
            </span>
          </span>
        </a>
      </div>
      <div
        class="item"
      >
        <a
          aria-disabled="false"
          class="link"
          role="button"
          tabindex="0"
        >
          <span
            class="iconic"
          >
            <span
              class="iconicIcon"
            >
              fontawesome icon bell
            </span>
            <span
              class="iconicContent"
            >
              Notify of new comments
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      class="group"
    >
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Created on 
            <a>
              <time
                datetime="2021-08-22T21:33:20.000Z"
                title="Aug 22, 2021"
              >
                Aug 22, 2021 21:33
              </time>
            </a>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon clock
          </span>
          <span
            class="iconicContent"
          >
            Updated on 
            <time
              datetime="2021-08-22T21:49:59.999Z"
              title="Aug 22, 2021"
            >
              Aug 22, 2021 21:49
            </time>
          </span>
        </span>
      </div>
      <div
        class="item content"
      >
        <span
          class="iconic iconicCentered"
        >
          <span
            class="iconicIcon"
          >
            fontawesome icon link
          </span>
          <span
            class="iconicContent"
          >
            <a
              style="margin-right: 1ex;"
            >
              Link to post
            </a>
             
            <button
              aria-label="Copy link"
              class="btn btn-default btn-sm"
              type="button"
              value="https://freefeed.net/post123"
            >
              Copy
            </button>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
